--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -341,7 +341,7 @@ section {
 /*--------------------------------------------------------------
 # Desktop Navigation
 --------------------------------------------------------------*/
-@media (min-width: 1280px) {
+@media (min-width: 1200px) {
   .navbar {
     padding: 0;
   }
@@ -372,7 +372,7 @@ section {
     font-family: var(--font-secondary);
     font-size: 16px;
     font-weight: 600;
-    color: rgba(255, 255, 255, 0.6);
+    color: rgba(255, 255, 255, 0.6) !important;
     white-space: nowrap;
     transition: 0.3s;
     position: relative;
@@ -409,7 +409,7 @@ section {
   .navbar .active,
   .navbar .active:focus,
   .navbar li:hover>a {
-    color: #fff;
+    color: #fff !important;
   }
 
   .navbar .dropdown ul {
@@ -470,7 +470,7 @@ section {
   }
 }
 
-@media (min-width: 1280px) and (max-width: 1366px) {
+@media (min-width: 1200px) and (max-width: 1366px) {
   .navbar .dropdown .dropdown ul {
     left: -90%;
   }
@@ -480,7 +480,7 @@ section {
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1200px) {
 
   .mobile-nav-show,
   .mobile-nav-hide {
@@ -491,7 +491,7 @@ section {
 /*--------------------------------------------------------------
 # Mobile Navigation
 --------------------------------------------------------------*/
-@media (max-width: 1279px) {
+@media (max-width: 1200px) {
   .navbar {
     position: fixed;
     top: 0;
@@ -523,7 +523,7 @@ section {
     font-family: var(--font-primary);
     font-size: 15px;
     font-weight: 600;
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.7) !important;
     white-space: nowrap;
     transition: 0.3s;
   }
@@ -539,7 +539,7 @@ section {
   .navbar .active,
   .navbar .active:focus,
   .navbar li:hover>a {
-    color: #fff;
+    color: #fff !important;
   }
 
   .navbar .getstarted,
@@ -574,7 +574,7 @@ section {
   }
 
   .mobile-nav-show {
-    color: rgba(255, 255, 255, 0.6);
+    color: #041432 !important;
     font-size: 28px;
     cursor: pointer;
     line-height: 0;
@@ -584,7 +584,7 @@ section {
   }
 
   .mobile-nav-hide {
-    color: #fff;
+    color: #fff !important;
     font-size: 32px;
     cursor: pointer;
     line-height: 0;
@@ -1609,9 +1609,9 @@ section {
 }
 
 @media (min-width: 992px) {
-  .pricing .featured {
-    transform: scale(1.15);
-  }
+  /* .pricing h3{
+    font-size: 14px;
+  } */
 }
 
 /*--------------------------------------------------------------
@@ -1760,7 +1760,7 @@ section {
   width: 100%;
   background-color: #fff;
   margin-bottom: 20px;
-  padding: 20px;
+  padding: 20px 10px;
   border-radius: 10px;
   color: #041432;
 }
